--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "image-js": "^1.0.0",
     "jotai": "^2.15.0",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.546.0",
     "ml-kmeans": "^6.0.0",
     "next": "15.5.6",
     "openai": "^6.5.0",
