--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
-    "color-thief-browser": "^2.0.2",
+    "colorthief": "^2.6.0",
     "dotenv": "^17.2.3",
+    "exifr": "^7.1.3",
     "formidable": "^3.5.4",
+    "get-image-colors": "^4.0.1",
     "image-js": "^1.0.0",
     "jotai": "^2.15.0",
     "lodash": "^4.17.21",
