--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-dropzone": "^14.3.8",
     "recharts": "^3.3.0",
     "sharp": "^0.34.4",
-    "tesseract.js": "^6.0.1"
+    "tesseract.js": "^6.0.1",
+    "tesseract.js-core": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
